# gnu_goatee

./: README  Setup.hs  cabal.sh  goatee.cabal  gohs.cabal  test.sh
goatee/: default.nix  goatee.cabal
goatee-gtk/: default.nix  goatee-gtk.cabal
goatee-gtk/src-exe/: Main.hs
goatee-gtk/src/Game/Goatee/Ui/: Gtk.hs
goatee-gtk/src/Game/Goatee/Ui/Gtk/: Actions.hs  Common.hs  GamePropertiesPanel.hs  Goban.hs  InfoLine.hs  Latch.hs  MainWindow.hs  NodePropertiesPanel.hs  PlayPanel.hs  Tool.hs  Utils.hs  Widget.hs
goatee-gtk/src/Game/Goatee/Ui/Gtk/Tool/: AssignStone.hs  Line.hs  Mark.hs  Null.hs  Play.hs  Visibility.hs
goatee-gtk/tests/: Test.hs
goatee-gtk/tests/Game/Goatee/Ui/Gtk/: CommonTest.hs  LatchTest.hs
goatee-wx/: default.nix  goatee-wx.cabal
goatee-wx/src/: Main.hs
goatee-wx/src/Game/Goatee/Ui/: Wx.hs
goatee/src/Game/Goatee/: App.hs  Common.hs
goatee/src/Game/Goatee/Common/: Bigfloat.hs
goatee/src/Game/Goatee/Lib/: Board.hs  Monad.hs  Parser.hs  Property.hs  Renderer.hs  Tree.hs  Types.hs
goatee/src/Game/Goatee/Lib/Property/: Base.hs  Info.hs  Parser.hs  Renderer.hs  Value.hs
goatee/src/Game/Goatee/Lib/Renderer/: Tree.hs
goatee/src/Game/Goatee/Sgf/: Board.hs  Monad.hs  Parser.hs  Property.hs  Renderer.hs  Tree.hs  Types.hs
goatee/src/Game/Goatee/Sgf/Property/: Base.hs  Info.hs  Parser.hs  Renderer.hs  Value.hs
goatee/src/Game/Goatee/Sgf/Renderer/: Tree.hs
goatee/tests/: Test.hs
goatee/tests/Game/Goatee/: CommonTest.hs
goatee/tests/Game/Goatee/Common/: BigfloatTest.hs
goatee/tests/Game/Goatee/Lib/: BoardTest.hs  MonadTest.hs  ParserTest.hs  ParserTestUtils.hs  PropertyTest.hs  RoundTripTest.hs  TestInstances.hs  TestUtils.hs  TreeTest.hs  TypesTest.hs
goatee/tests/Game/Goatee/Lib/Property/: ParserTest.hs
goatee/tests/Game/Goatee/Sgf/: BoardTest.hs  MonadTest.hs  ParserTest.hs  ParserTestUtils.hs  PropertyTest.hs  RoundTripTest.hs  TestInstances.hs  TestUtils.hs  TreeTest.hs  TypesTest.hs
goatee/tests/Game/Goatee/Sgf/Property/: ParserTest.hs
goatee/tests/Game/Goatee/Test/: Common.hs
hooks/: git-pre-commit  lint
scripts/: git-pre-commit  lint  test
src/: Common.hs  Main.hs  Model.hs  Sgf.hs  Test.hs  UiBoard.hs
src-gtk/: Main.hs
src-gtk/Game/Goatee/Ui/: Gtk.hs
src-gtk/Game/Goatee/Ui/Gtk/: InfoLine.hs  Latch.hs
src-gtk/Khumba/Goatee/Ui/: Gtk.hs
src-gtk/Khumba/Goatee/Ui/Gtk/: Actions.hs  Common.hs  GamePropertiesPanel.hs  Goban.hs  LatchTest.hs  MainWindow.hs  Utils.hs
src-wx/: Main.hs
src-wx/Khumba/Goatee/Ui/: Wx.hs
src/Game/Goatee/: App.hs
src/Game/Goatee/Sgf/: Board.hs
src/Game/Goatee/Sgf/Property/: Info.hs
src/Khumba/GoHS/: Common.hs  CommonTest.hs  Sgf.hs  SgfTest.hs  SgfTestUtils.hs  UiBoard.hs
src/Khumba/GoHS/Sgf/: Monad.hs  MonadTest.hs  Parser.hs  ParserTest.hs
src/Khumba/GoHS/Test/: Common.hs
src/Khumba/GoHS/Ui/: Gtk.hs  Wx.hs
src/Khumba/GoHS/Ui/Gtk/: Actions.hs  Board.hs  Common.hs  Goban.hs  InfoLine.hs  MainWindow.hs
src/Khumba/Goatee/: App.hs  Common.hs  CommonTest.hs  Sgf.hs  SgfTest.hs  SgfTestUtils.hs
src/Khumba/Goatee/Sgf/: Base.hs  Board.hs  BoardTest.hs  Monad.hs  MonadTest.hs  Parser.hs  ParserTest.hs  Printer.hs  Property.hs  PropertyTest.hs  Renderer.hs  RoundTripTest.hs  TestUtils.hs  Tree.hs  TreeTest.hs  Types.hs  TypesTest.hs
src/Khumba/Goatee/Sgf/Property/: Base.hs  Info.hs  Infos.hs  Parser.hs  Renderer.hs  Value.hs
src/Khumba/Goatee/Sgf/Renderer/: Tree.hs
src/Khumba/Goatee/Test/: Common.hs
src/Khumba/Goatee/Ui/: Gtk.hs  Wx.hs
src/Khumba/Goatee/Ui/Gtk/: Actions.hs  Common.hs  GamePropertiesPanel.hs  Goban.hs  InfoLine.hs  Latch.hs  MainWindow.hs  Utils.hs
tests/: Test.hs
tests/Game/Goatee/Sgf/: ParserTest.hs  PropertyTest.hs
tests/Khumba/Goatee/: CommonTest.hs
tests/Khumba/Goatee/Sgf/: BoardTest.hs  MonadTest.hs  ParserTestUtils.hs  TestInstances.hs  TestUtils.hs  TreeTest.hs
tests/Khumba/Goatee/Sgf/Property/: ParserTest.hs
