name: goatee
version: 0.0.1
synopsis: A monadic take on a 2,500-year-old board game.
category: Games
license: AGPL-3
license-file: LICENSE
copyright: Copyright 2014 Bryan Gardiner
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
homepage: http://khumba.net/projects/goatee
bug-reports: https://savannah.nongnu.org/projects/goatee/
tested-with: GHC
cabal-version: >=1.8
build-type: Simple
data-files: LICENSE
extra-source-files:
    cabal.sh
    hooks/git-pre-commit
    hooks/lint
    README
    test.sh
description:
    Goatee is a game editor for Go, written in Haskell.  It is developed in two
    parts: a library for working with SGF files, and a GUI for filling your Go
    fancy.  It aims to be full-featured, supporting all of the SGF spec and
    allowing for full customization of the game records you create.

source-repository head
    type: git
    location: git://git.sv.gnu.org/goatee.git

library
    build-depends:
        base,
        containers,
        mtl,
        parsec,
        template-haskell
    exposed-modules:
        Khumba.Goatee.App
        Khumba.Goatee.Common
        Khumba.Goatee.Sgf.Board
        Khumba.Goatee.Sgf.Monad
        Khumba.Goatee.Sgf.Parser
        Khumba.Goatee.Sgf.Property
        Khumba.Goatee.Sgf.Property.Parser
        Khumba.Goatee.Sgf.Renderer
        Khumba.Goatee.Sgf.Renderer.Tree
        Khumba.Goatee.Sgf.Tree
        Khumba.Goatee.Sgf.Types
    extensions:
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        MultiParamTypeClasses
        UndecidableInstances
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: src
    other-modules:
        Khumba.Goatee.Sgf.Property.Base
        Khumba.Goatee.Sgf.Property.Info
        Khumba.Goatee.Sgf.Property.Renderer
        Khumba.Goatee.Sgf.Property.Value
        Paths_goatee

executable goatee-gtk
    main-is: Main.hs
    build-depends:
        base,
        cairo,
        containers,
        directory,
        filepath,
        gtk,
        goatee,
        mtl
    extensions:
        ExistentialQuantification
        FlexibleInstances
        FunctionalDependencies
        MultiParamTypeClasses
        ScopedTypeVariables
        ViewPatterns
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: src-gtk
    other-modules:
        Khumba.Goatee.Ui.Gtk
        Khumba.Goatee.Ui.Gtk.Actions
        Khumba.Goatee.Ui.Gtk.Common
        Khumba.Goatee.Ui.Gtk.GamePropertiesPanel
        Khumba.Goatee.Ui.Gtk.Goban
        Khumba.Goatee.Ui.Gtk.InfoLine
        Khumba.Goatee.Ui.Gtk.Latch
        Khumba.Goatee.Ui.Gtk.MainWindow
        Khumba.Goatee.Ui.Gtk.Utils

executable goatee-wx
    main-is: Main.hs
    build-depends:
        base,
        goatee,
        wx,
        wxcore
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: src-wx
    other-modules:
        Khumba.Goatee.Ui.Wx

test-suite test-goatee
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: src-gtk, tests
    build-depends:
        base,
        containers,
        goatee,
        HUnit,
        mtl,
        parsec,
        test-framework,
        test-framework-hunit
    ghc-options: -W -fwarn-incomplete-patterns
    other-modules:
        Khumba.Goatee.CommonTest
        Khumba.Goatee.Sgf.BoardTest
        Khumba.Goatee.Sgf.MonadTest
        Khumba.Goatee.Sgf.ParserTest
        Khumba.Goatee.Sgf.ParserTestUtils
        Khumba.Goatee.Sgf.Property.ParserTest
        Khumba.Goatee.Sgf.PropertyTest
        Khumba.Goatee.Sgf.RoundTripTest
        Khumba.Goatee.Sgf.TestInstances
        Khumba.Goatee.Sgf.TestUtils
        Khumba.Goatee.Sgf.TreeTest
        Khumba.Goatee.Sgf.TypesTest
        Khumba.Goatee.Test.Common
        Khumba.Goatee.Ui.Gtk.LatchTest
        Test
