name: goatee
version: 0.0.1
synopsis: A monadic take on a 2,500-year-old board game.
category: Game
license: AGPL-3
license-file: LICENSE
copyright: Copyright 2014 Bryan Gardiner
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
homepage: http://khumba.net/projects/goatee
bug-reports: https://savannah.nongnu.org/projects/goatee/
tested-with: GHC
cabal-version: >=1.8
build-type: Simple
data-files: LICENSE
extra-source-files:
    cabal.sh
    hooks/git-pre-commit
    hooks/lint
    README
    test.sh
description:
    Goatee is a game editor for Go.  It is developed in two parts: a library for
    working with SGF files, and a GUI for filling your Go fancy.  It aims to be
    full-featured, supporting all of the SGF spec and allowing for full
    customization of the game records you create.

source-repository head
    type: git
    location: git://git.sv.gnu.org/goatee.git

library
    build-depends:
        base >= 4 && < 5,
        containers >= 0.4 && < 0.6,
        mtl >= 2.1 && < 2.3,
        parsec >= 3.1 && < 3.2,
        template-haskell >= 2.7 && < 2.9
    exposed-modules:
        Game.Goatee.App
        Game.Goatee.Common
        Game.Goatee.Sgf.Board
        Game.Goatee.Sgf.Monad
        Game.Goatee.Sgf.Parser
        Game.Goatee.Sgf.Property
        Game.Goatee.Sgf.Property.Parser
        Game.Goatee.Sgf.Renderer
        Game.Goatee.Sgf.Renderer.Tree
        Game.Goatee.Sgf.Tree
        Game.Goatee.Sgf.Types
    extensions:
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        MultiParamTypeClasses
        UndecidableInstances
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: src
    other-modules:
        Game.Goatee.Sgf.Property.Base
        Game.Goatee.Sgf.Property.Info
        Game.Goatee.Sgf.Property.Renderer
        Game.Goatee.Sgf.Property.Value
        Paths_goatee

executable goatee-gtk
    main-is: Main.hs
    build-depends:
        base >= 4 && < 5,
        cairo >= 0.12 && < 0.13,
        containers >= 0.4 && < 0.6,
        directory >= 1.1 && < 1.3,
        filepath >= 1.3 && < 1.4,
        gtk >= 0.12 && < 0.13,
        goatee,
        mtl >= 2.1 && < 2.3
    extensions:
        ExistentialQuantification
        FlexibleInstances
        FunctionalDependencies
        MultiParamTypeClasses
        ScopedTypeVariables
        ViewPatterns
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: src-gtk
    other-modules:
        Game.Goatee.Ui.Gtk
        Game.Goatee.Ui.Gtk.Actions
        Game.Goatee.Ui.Gtk.Common
        Game.Goatee.Ui.Gtk.GamePropertiesPanel
        Game.Goatee.Ui.Gtk.Goban
        Game.Goatee.Ui.Gtk.InfoLine
        Game.Goatee.Ui.Gtk.Latch
        Game.Goatee.Ui.Gtk.MainWindow
        Game.Goatee.Ui.Gtk.Utils

executable goatee-wx
    main-is: Main.hs
    build-depends:
        base >= 4 && < 5,
        goatee,
        wx >= 0.13 && < 0.91,
        wxcore >= 0.13 && < 0.91
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: src-wx
    other-modules:
        Game.Goatee.Ui.Wx

test-suite test-goatee
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: src-gtk, tests
    build-depends:
        base >= 4 && < 5,
        containers >= 0.4 && < 0.6,
        goatee,
        HUnit >= 1.2 && < 1.3,
        mtl >= 2.1 && < 2.3,
        parsec >= 3.1 && < 3.2,
        test-framework >= 0.6 && < 0.9,
        test-framework-hunit >= 0.2 && < 0.4
    ghc-options: -W -fwarn-incomplete-patterns
    other-modules:
        Game.Goatee.CommonTest
        Game.Goatee.Sgf.BoardTest
        Game.Goatee.Sgf.MonadTest
        Game.Goatee.Sgf.ParserTest
        Game.Goatee.Sgf.ParserTestUtils
        Game.Goatee.Sgf.Property.ParserTest
        Game.Goatee.Sgf.PropertyTest
        Game.Goatee.Sgf.RoundTripTest
        Game.Goatee.Sgf.TestInstances
        Game.Goatee.Sgf.TestUtils
        Game.Goatee.Sgf.TreeTest
        Game.Goatee.Sgf.TypesTest
        Game.Goatee.Test.Common
        Game.Goatee.Ui.Gtk.LatchTest
        Test
