name: gohs
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: A Go client and SGF library with a focus on flexibility.
description:  
data-dir: ""

executable gohs
    build-depends: base, containers, deepseq, gtk, mtl, parsec,
                   strict-concurrency, wx, wxcore
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules:
        Khumba.GoHS.Common
        Khumba.GoHS.Sgf
        Khumba.GoHS.Ui.Gtk
        Khumba.GoHS.Ui.Gtk.Board
        Khumba.GoHS.Ui.Gtk.Common
    ghc-options: -fwarn-incomplete-patterns
 
test-suite test-gohs
    build-depends: base, containers, HUnit, mtl, test-framework,
                   test-framework-hunit
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    extensions: MultiParamTypeClasses
    hs-source-dirs: src
