name: gohs
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: A Go client and SGF library with a focus on flexibility.
description:  
data-dir: ""

executable gohs
    build-depends: base, cairo, containers, gtk, mtl, parsec, wx, wxcore
    main-is: Main.hs
    buildable: True
    extensions: ExistentialQuantification
    hs-source-dirs: src
    other-modules:
        Khumba.GoHS.Common
        Khumba.GoHS.Sgf
        Khumba.GoHS.Sgf.Parser
        Khumba.GoHS.Ui.Gtk
        Khumba.GoHS.Ui.Gtk.Common
        Khumba.GoHS.Ui.Gtk.Goban
        Khumba.GoHS.Ui.Gtk.InfoLine
        Khumba.GoHS.Ui.Gtk.MainWindow
    ghc-options: -fwarn-incomplete-patterns

test-suite test-gohs
    build-depends: base, containers, HUnit, mtl, test-framework,
                   test-framework-hunit
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    hs-source-dirs: src
