name: goatee-gtk
version: 0.0.1
synopsis: A monadic take on a 2,500-year-old board game - GTK+ UI.
category: Game
license: AGPL-3
license-file: LICENSE
copyright: Copyright 2014 Bryan Gardiner
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
homepage: http://khumba.net/projects/goatee
bug-reports: https://savannah.nongnu.org/projects/goatee/
tested-with: GHC
cabal-version: >=1.8
build-type: Simple
data-files: LICENSE
description:
    Goatee is a game editor for Go.  It is developed in two parts: a library for
    working with SGF files, and a GUI for filling your Go fancy.  It aims to be
    full-featured, supporting all of the SGF spec and allowing for full
    customization of the game records you create.

source-repository head
    type: git
    location: git://git.sv.gnu.org/goatee.git

library
    build-depends:
        base >= 4 && < 5,
        cairo >= 0.12 && < 0.13,
        containers >= 0.4 && < 0.6,
        directory >= 1.1 && < 1.3,
        filepath >= 1.3 && < 1.4,
        gtk >= 0.12 && < 0.13,
        goatee >= 0.0.1 && < 0.1,
        mtl >= 2.1 && < 2.3
    exposed-modules:
        Game.Goatee.Ui.Gtk
        Game.Goatee.Ui.Gtk.Latch
    extensions:
        ExistentialQuantification
        FlexibleInstances
        FunctionalDependencies
        MultiParamTypeClasses
        ScopedTypeVariables
        ViewPatterns
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: src
    other-modules:
        Game.Goatee.Ui.Gtk.Actions
        Game.Goatee.Ui.Gtk.Common
        Game.Goatee.Ui.Gtk.GamePropertiesPanel
        Game.Goatee.Ui.Gtk.Goban
        Game.Goatee.Ui.Gtk.InfoLine
        Game.Goatee.Ui.Gtk.MainWindow
        Game.Goatee.Ui.Gtk.Utils
        Paths_goatee_gtk

executable goatee-gtk
    build-depends:
        base >= 4 && < 5,
        gtk >= 0.12 && < 0.13,
        goatee-gtk
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: src-exe
    main-is: Main.hs

test-suite test-goatee-gtk
    build-depends:
        base >= 4 && < 5,
        goatee-gtk,
        HUnit >= 1.2 && < 1.3,
        test-framework >= 0.6 && < 0.9,
        test-framework-hunit >= 0.2 && < 0.4
    ghc-options: -W -fwarn-incomplete-patterns
    hs-source-dirs: tests
    main-is: Test.hs
    other-modules:
        Game.Goatee.Ui.Gtk.LatchTest
        Test
    type: exitcode-stdio-1.0
