name: goatee-wx
version: 0.3.0
synopsis: A monadic take on a 2,500-year-old board game - wxWidgets UI.
category: Game
license: AGPL-3
license-file: LICENSE
copyright: Copyright 2014-2015 Bryan Gardiner
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
homepage: http://khumba.net/projects/goatee
bug-reports: https://savannah.nongnu.org/projects/goatee/
tested-with: GHC
cabal-version: >=1.8
build-type: Simple
data-files: LICENSE
description:
    Goatee is a Go library and game editor, written in Haskell.  It provides a
    GUI for recording, studying, and editing game records.  Underneath this is a
    portable library for manipulating SGF files to build UIs and tools.  Goatee
    aims to be full-featured by supporting all of the SGF spec and allowing for
    full and easy customization of the game records you create.
    .
    This package is the wxWidgets UI.

source-repository head
    type: git
    location: git://git.savannah.gnu.org/goatee.git

executable goatee-wx
    build-depends:
        base >= 4 && < 5,
        goatee >= 0.3 && < 0.4,
        wx >= 0.13 && < 0.91,
        wxcore >= 0.13 && < 0.91
    ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
    hs-source-dirs: src
    main-is: Main.hs
    other-modules:
        Game.Goatee.Ui.Wx
